deploy/k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: identityserver
spec:
  selector:
    app: identityserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identityserver
spec:
  replicas: 1 # TODO: Need to deal with operational data to replicate multiple pods.
  selector:
    matchLabels:
      app: identityserver
  template:
    metadata:
      labels:
        app: identityserver
    spec:
      containers:
      - name: identityserver
        image: identityserver:dev
        ports:
        - containerPort: 80
        volumeMounts:
        - name: protection-keys-directory
          mountPath: /data-protection-kyes
      volumes:
      - name: protection-keys-directory
        persistentVolumeClaim:
          claimName: identity-server-data-protection-keys
---
apiVersion: v1
kind: Service
metadata:
  name: bff-spa-shopping
spec:
  selector:
    app: bff-spa-shopping
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-spa-shopping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff-spa-shopping
  template:
    metadata:
      labels:
        app: bff-spa-shopping
    spec:
      containers:
      - name: bff-spa-shopping
        image: bff-spa-shopping:dev
        ports:
        - containerPort: 80
        volumeMounts:
        - name: protection-keys-directory
          mountPath: /data-protection-kyes
      volumes:
      - name: protection-keys-directory
        persistentVolumeClaim:
          claimName: bff-spa-shopping-data-protection-keys
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
spec:
  selector:
    app: catalog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
      - name: catalog
        image: catalog:dev
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: cart
  labels:
    app: cart
spec:
  selector:
    app: cart
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: cart-data
      containers:
      - name: cart
        image: cart:dev
        volumeMounts:
        - mountPath: "/app/data"
          name: data
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ordering
  labels:
    app: ordering
spec:
  selector:
    app: ordering
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordering
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ordering
  template:
    metadata:
      labels:
        app: ordering
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: ordering-data
      containers:
      - name: ordering
        image: ordering:dev
        volumeMounts:
        - mountPath: "/app/data"
          name: data
        ports:
        - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-example-ingress
  annotations:
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - demo.yunfei.com
    secretName: demoyunfeicom-tls
  - hosts:
    - idp.yunfei.local
    secretName: yunfei.local-tls
  rules:
    - host: demo.yunfei.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bff-spa-shopping
                port:
                  number: 80
    - host: idp.yunfei.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: identityserver
                port:
                  number: 80
